# netcoin

./: .gitignore  BUILD.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  build-all-releases.ps1  build-and-run.ps1  build-and-run.sh  build-cuda.ps1  build-release.ps1  build-release.sh  docker-compose.yml  test_miner.ptx
.cargo/: config.toml
astram-dns/: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  check-dns.sh  deploy.sh  docker-compose.yml  nginx-example.conf  register-node.sh  setup-domain.sh
astram-dns/src/: main.rs
astram-stratum/: Cargo.toml
astram-stratum/src/: main.rs
config/: Cargo.toml
config/src/: config.rs
core/: Cargo.toml  build.rs
core/src/: checkpoint.rs  config.rs  lib.rs  security.rs
core/src/block/: mod.rs
core/src/blockchain/: mod.rs
core/src/consensus/: cuda.rs  mod.rs
core/src/consensus/cuda/: miner.cu
core/src/transaction/: mod.rs
docs/: architecture.md  design.md  index.md  security.md  whitepaper.md
explorer/: Cargo.toml
explorer/src/: api.rs  db.rs  handlers.rs  main.rs  rpc.rs  state.rs
explorer/web/: index.html  package-lock.json  package.json  vite.config.js
explorer/web/src/: App.vue  main.js
explorer/web/src/api/: explorer.js
explorer/web/src/router/: index.js
explorer/web/src/views/: Address.vue  BlockDetail.vue  Blocks.vue  Home.vue  NodeStatus.vue  TransactionDetail.vue  Transactions.vue
netcoin-dns/: Cargo.toml  DEPLOYMENT.md  check-dns.sh  deploy.sh  docker-compose.yml  nginx-example.conf  register-node.sh  setup-domain.sh
netcoin-dns/src/: main.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
node/src/p2p/: manager.rs  messages.rs  mod.rs  service.rs
node/src/server/: eth_rpc.rs  mod.rs
node/web/: README.md  dashboard.html
wallet-cli/: Cargo.toml
wallet-cli/src/: commands.rs  main.rs
