[package]
name = "Astram-stratum"
version = "0.1.0"
edition = "2024"

[dependencies]
Astram-core = { path = "../core" }
Astram-config = { path = "../config" }
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
primitive-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
warp = { version = "0.4.2", features = ["server"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
bincode = "2.0.1"

