[package]
name = "netcoin-core"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
bincode = "2.0.1"
rocksdb = "0.24.0"
anyhow = "1.0"
thiserror = "2.0.16"
primitive-types = { version = "0.12", features = ["serde"] }
log = "0.4"
# Ethereum compatibility (secp256k1)
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
libp2p = { version = "0.56.0", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "gossipsub",
    "kad",
] }
once_cell = "1.21.3"
