[package]
name = "Astram-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
Astram-core = { path = "../core" }
Astram-node = { path = "../node", default-features = false }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
base64 = "0.22.1"
bincode = "2.0.0"
primitive-types = { version = "0.12", features = ["serde"] }
rocksdb = "0.24.0"

[features]
default = []
cuda-miner = ["Astram-node/cuda-miner"]
