[package]
name = "Astram-node"
version = "0.1.0"
edition = "2024"

[dependencies]
Astram-core = { path = "../core" }
Astram-config = { path = "../config" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bytes = "1"
warp = { version = "0.4.2", features = ["server"] }
chrono = { version = "0.4", features = ["serde"] }
libp2p = { version = "0.56", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "gossipsub",
    "kad",
] }
anyhow = "1.0.100"
bincode = "2.0.0"
primitive-types = { version = "0.12", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
parking_lot = "0.12"
tokio-stream = "0.1.17"
futures = "0.3.31"
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4"
rlp = "0.6"
secp256k1 = { version = "0.29", features = ["recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
cuda-miner = ["Astram-core/cuda-miner"]

