[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
Astram-config = { path = "../config" }
Astram-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10.9"
# Ethereum compatibility (secp256k1)
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"
bincode = "2.0.1"
anyhow = "1.0.100"
primitive-types = { version = "0.12", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
crypto = "0.5.1"

